--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ google-cloud-storage==2.8.0
 google-crc32c==1.5.0
 google-resumable-media==2.4.1
 googleapis-common-protos==1.59.0
+gunicorn==20.1.0
 idna==3.4
 inflection==0.5.1
 itypes==1.2.0
